tdf#123388 sw: add PRODUCT table formula

for DOCX interoperability.

Change-Id: Icd19d1e0025e76bc3ff00a347fa2743ed7c8ee06